--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -9,27 +9,26 @@
     "port": 8300,
     "protocol": "vmess",
     "settings": {
-      "clients": [
-      ]
+      "clients": []
     },
     "streamSettings": {
       "network": "tcp"
     },
     "tag": "proxy"
   },
-  "inboundDetour": [
-    {
-      "listen": "0.0.0.0",
-      "port": 8301,
-      "protocol": "dokodemo-door",
-      "settings": {
-        "address": "0.0.0.0"
-      },
-      "tag": "api"
-    }
-  ],
+  "inboundDetour": [{
+    "listen": "0.0.0.0",
+    "port": 8301,
+    "protocol": "dokodemo-door",
+    "settings": {
+      "address": "0.0.0.0"
+    },
+    "tag": "api"
+  }],
   "log": {
-    "loglevel": "debug"
+    "loglevel": "debug",
+    "access": "/var/log/v2ray/access.log",
+    "error": "/var/log/v2ray/error.log"
   },
   "outbound": {
     "protocol": "freedom",
@@ -37,15 +36,13 @@
   },
   "routing": {
     "settings": {
-      "rules": [
-        {
-          "inboundTag": [
-            "api"
-          ],
-          "outboundTag": "api",
-          "type": "field"
-        }
-      ]
+      "rules": [{
+        "inboundTag": [
+          "api"
+        ],
+        "outboundTag": "api",
+        "type": "field"
+      }]
     },
     "strategy": "rules"
   }
