--- a/ssr/config.json
+++ b/ssr/config.json
@@ -13,21 +13,21 @@
     "obfs_param": "",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": 0,
-
-    "additional_ports" : {
+    "additional_ports": {
         "443": {
-        "passwd": "pubpassword",
-        "method": "aes-128-ctr",
-        "protocol": "auth_aes128_md5",
-        "protocol_param": "#",
-        "obfs": "tls1.2_ticket_auth",
-        "obfs_param": ""
-    }, // only works under multi-user mode
-    "additional_ports_only" : false, // only works under multi-user mode
-    "timeout": 120,
-    "udp_timeout": 60,
-    "dns_ipv6": false,
-    "connect_verbose_info": 0,
-    "redirect": "",
-    "fast_open": false
+            "passwd": "pubpassword",
+            "method": "aes-128-ctr",
+            "protocol": "auth_aes128_md5",
+            "protocol_param": "#",
+            "obfs": "tls1.2_ticket_auth",
+            "obfs_param": ""
+        },
+        "additional_ports_only": false,
+        "timeout": 120,
+        "udp_timeout": 60,
+        "dns_ipv6": false,
+        "connect_verbose_info": 0,
+        "redirect": "",
+        "fast_open": false
+    }
 }
