--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -1,7 +1,8 @@
 {
   "api": {
     "services": [
-      "HandlerService"
+      "HandlerService",
+      "StatsService"
     ],
     "tag": "api"
   },
@@ -45,5 +46,17 @@
       }]
     },
     "strategy": "rules"
+  },
+  "policy": {
+    "levels": {
+      "1": {
+        "handshake": 4,
+        "connIdle": 300,
+        "uplinkOnly": 5,
+        "downlinkOnly": 30,
+        "statsUserUplink": true,
+        "statsUserDownlink": true
+      }
+    }
   }
 }
