--- a/mu.env.example
+++ b/mu.env.example
@@ -1,6 +1,7 @@
-MU_URI=https://demo.sspanel.xyz/mu/v2/
+MU_URI=https://demo.sspanel.xyz/mu/v2
 MU_NODE_ID=1
 MU_TOKEN=forLove
 
 V2RAY_ADDR=v2ray:8301
 V2RAY_TAG=proxy
+LOG_PATH=/var/log/v2ray-mu/v2ray-mu.log
