--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,9 @@
 nodaemon=true
 
 [program:v2ray]
+user=root
 command=/usr/bin/v2ray -c /etc/v2ray/config.json
 
 [program:v2ray-mu]
+user=root
 command=/usr/bin/v2ray-mu
