--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 
 [program:v2ray]
 user=root
-command=/usr/bin/v2ray -c /etc/v2ray/config.json
+command=/usr/bin/v2ray run -c /etc/v2ray/config.json
 
 [program:v2ray-mu]
 user=root
