--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -29,9 +29,9 @@
     "tag": "api"
   }],
   "log": {
-    "loglevel": "debug",
-    "access": "/var/log/v2ray/access.log",
-    "error": "/var/log/v2ray/error.log"
+    "loglevel": "info",
+    "access": "/dev/stdout",
+    "error": "/dev/stderr"
   },
   "outbound": {
     "protocol": "freedom",
