--- a/config.json
+++ b/config.json
@@ -33,8 +33,8 @@
     }],
     "log": {
       "loglevel": "warning",
-      "access": "/var/log/v2ray/access.log",
-      "error": "/var/log/v2ray/error.log"
+      "access": "/dev/stdout",
+      "error": "/dev/stderr"
     },
     "outbound": {
       "protocol": "freedom",
